edit some files

--- a/_posts/2014-10-05-debian7设置golang环境变量.html
+++ b/_posts/2014-10-05-debian7设置golang环境变量.html
@@ -55,7 +55,7 @@ export PATH=$PATH:$GOBIN
 <div class="outline-text-2" id="text-3">
 <p>
 把环境设置放在~/.profile就行了。
-不得其解的问题，我看了~/.profile里有这么一句。不知今儿为啥不行了。
+不得其解的是，我看了~/.profile里有这么几句。按理说已经把.bashrc包含进去了，不知今儿为啥不行了。
 </p>
 <pre class="example">
 # if running bash
