--- a/_posts/2014-10-12-aptitude被锁定的错误解决办法.html
+++ b/_posts/2014-10-12-aptitude被锁定的错误解决办法.html
@@ -34,7 +34,7 @@ W: 无法锁定缓存文件；这通常意味着 dpkg 或另一个 apt 工具已
 <h2 id="sec-1"><span class="section-number-2">1</span> 解决办法1:温柔解决，不一定有效果</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-运行ps ax,找出aptitude进程，杀死。
+运行ps ax,找出aptitude进程，杀死。我这边找不到aptitude相关进程，只好采用第二种办法。
 </p>
 </div>
 </div>
