--- a/_posts/2014-10-04-git-everthing-up-to-date.html
+++ b/_posts/2014-10-04-git-everthing-up-to-date.html
@@ -9,13 +9,13 @@ categories: [git , ]
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#sec-1">1. git push时，提示everthing up-to-date *</a></li>
+<li><a href="#sec-1">1. git push时，提示everthing up-to-date信息 *</a></li>
 </ul>
 </div>
 </div>
 
 <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1"><span class="section-number-2">1</span> git push时，提示everthing up-to-date *</h2>
+<h2 id="sec-1"><span class="section-number-2">1</span> git push时，提示everthing up-to-date信息 *</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 上传没有成功
