--- a/_posts/2014-10-05-org-octopress+github构建个人博客.html
+++ b/_posts/2014-10-05-org-octopress+github构建个人博客.html
@@ -39,15 +39,13 @@ categories: [ octopress,git, jekyll ]
 <div class="outline-text-2" id="text-1">
 <p>
 请参照这篇博客：<a href="http://blog.csdn.net/renfufei/article/details/37725057">http://blog.csdn.net/renfufei/article/details/37725057</a>
+感谢作者的付出。
 </p>
 </div>
 </div>
 <div id="outline-container-sec-2" class="outline-2">
 <h2 id="sec-2"><span class="section-number-2">2</span> 安装git和ruby</h2>
 <div class="outline-text-2" id="text-2">
-<p>
-&lt;!&#x2013;more&#x2013;&gt;
-</p>
 <pre class="example">
 sudo aptitude install git ruby ruby-dev
 </pre>
@@ -145,18 +143,12 @@ org
 在.emacs中添加以下内容：
 </p>
 <pre class="example">
-(require 'org-install)
-   (require 'org)
-   (require 'org-publish)
-   (add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
-   (add-hook 'org-mode-hook 'turn-on-font-lock)
-   (add-hook 'org-mode-hook 
-   (lambda () (setq truncate-lines nil)))
-
-   (global-set-key "\C-cl" 'org-store-link)
-   (global-set-key "\C-ca" 'org-agenda)
-   (global-set-key "\C-cb" 'org-iswitchb)
-   (setq org-log-done t)
+(require 'org)
+(require 'org-publish)
+(add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
+(add-hook 'org-mode-hook 'turn-on-font-lock)
+(add-hook 'org-mode-hook 
+(lambda () (setq truncate-lines nil)))
 </pre>
 </div>
 </div>
@@ -178,7 +170,7 @@ org-octopress
 <h3 id="sec-4-4"><span class="section-number-3">4.4</span> 配置org-octopress</h3>
 <div class="outline-text-3" id="text-4-4">
 <p>
-安装完org-octopress后，在.emacs中加入以下内容。注意把路径换成自己的。
+安装完org-octopress后，在.emacs中加入以下内容。
 </p>
 <pre class="example">
 (require 'org-octopress)
