--- a/_posts/2014-10-08-debian7构建hexo+github博客.html
+++ b/_posts/2014-10-08-debian7构建hexo+github博客.html
@@ -18,8 +18,6 @@ categories: [linux ,hexo ]
 </div>
 </div>
 
-
-
 <div id="outline-container-sec-1" class="outline-2">
 <h2 id="sec-1"><span class="section-number-2">1</span> 安装nodejs和npm</h2>
 <div class="outline-text-2" id="text-1">
@@ -65,7 +63,6 @@ sudo ln -s /usr/bin/nodejs /usr/bin/node
 </div>
 </div>
 
-
 <div id="outline-container-sec-4" class="outline-2">
 <h2 id="sec-4"><span class="section-number-2">4</span> 安装依赖包</h2>
 <div class="outline-text-2" id="text-4">
@@ -79,7 +76,7 @@ npm install
 <h2 id="sec-5"><span class="section-number-2">5</span> 本地预览</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-进入hexo文件夹，运行以下命令。然后就可以在浏览器中通过localhost:4000进行预览。
+与octopress大同小异。进入hexo文件夹，运行以下命令。然后就可以在浏览器中通过localhost:4000进行预览。
 </p>
 <pre class="example">
 hexo generate
