--- a/_posts/2014-10-08-org-jekyll-mode安装及配置.html
+++ b/_posts/2014-10-08-org-jekyll-mode安装及配置.html
@@ -15,7 +15,15 @@ categories: [jekyll ,org ]
 </ul>
 </div>
 </div>
-
+<p>
+&#x2014;
+layout: page
+title: org-jekyll-mode安装及配置
+excerpt: excerpt
+tags: org; jekyll
+categories: org; jekyll
+&#x2014;
+</p>
 
 
 <p>
