--- a/_posts/2014-10-05-org-octopress+github构建个人博客.html
+++ b/_posts/2014-10-05-org-octopress+github构建个人博客.html
@@ -96,7 +96,7 @@ rake setup_github_pages
 </p>
 
 <p>
-然后修改<sub>config</sub>.yml,填入相应的信息。
+然后修改" _config.yml",填入相应的信息。
 </p>
 <pre class="example">
 url: http://yoursite.com
