--- a/categories.html
+++ b/categories.html
@@ -5,12 +5,12 @@ header: Posts By Category
 group: navigation
 ---
 {% for category in site.categories %}
-<h2>{{ category | first }}</h2>
+<h3>{{ category | first }}
 </span>{{ category | last | size }}</span>
 <ul class="arc-list">
     {% for post in category.last %}
         <li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-</ul>
+</ul></h3>
 {% endfor %}
 
