--- a/categories.html
+++ b/categories.html
@@ -4,13 +4,14 @@ title: 分类
 header: Posts By Category
 group: navigation
 ---
+<h4>
 {% for category in site.categories %}
-<h3>{{ category | first }}
+{{ category | first }}
 </span>{{ category | last | size }}</span>
-<ul class="arc-list">
+<ul>
     {% for post in category.last %}
         <li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-</ul></h3>
+</ul>
 {% endfor %}
-
+</h4>
