增加go语言笔记（二）并给所有post添加author

--- a/_posts/2014-10-04-git-everthing-up-to-date.html
+++ b/_posts/2014-10-04-git-everthing-up-to-date.html
@@ -2,8 +2,9 @@
 layout: post
 comments: true
 title: git push提示everthing up to date,上传不成功
-tags: 
+tags: git
 categories: [git , ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
