--- a/_posts/2014-10-05-debian7设置golang环境变量.html
+++ b/_posts/2014-10-05-debian7设置golang环境变量.html
@@ -4,6 +4,7 @@ comments: true
 title: debian7/gnome下设置golang环境
 tags: 
 categories: [linux ,golang ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
