--- a/_posts/2014-10-05-org-octopress+github构建个人博客.html
+++ b/_posts/2014-10-05-org-octopress+github构建个人博客.html
@@ -4,6 +4,7 @@ comments: true
 title: org-octopress + github 构建静态博客
 tags: 
 categories: [ octopress,git, jekyll ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
