--- a/_posts/2014-10-07-解决升级org8而导致的几个问题.html
+++ b/_posts/2014-10-07-解决升级org8而导致的几个问题.html
@@ -4,6 +4,7 @@ comments: true
 title: 解决升级org8而导致的几个问题
 tags: 
 categories: [emacs, org]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
