--- a/_posts/2014-10-08-debian7构建hexo+github博客.html
+++ b/_posts/2014-10-08-debian7构建hexo+github博客.html
@@ -4,6 +4,7 @@ comments: true
 title: debian7搭建hexo博客
 tags: 
 categories: [linux ,hexo ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
