--- a/_posts/2014-10-08-org-jekyll-mode安装及配置.html
+++ b/_posts/2014-10-08-org-jekyll-mode安装及配置.html
@@ -4,6 +4,7 @@ comments: true
 title: org-jekyll-mode安装及配置
 tags: 
 categories: [jekyll ,org ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
