--- a/_posts/2014-10-12-aptitude被锁定的错误解决办法.html
+++ b/_posts/2014-10-12-aptitude被锁定的错误解决办法.html
@@ -4,6 +4,7 @@ comments: true
 title: aptitude被锁定无法升级软件
 tags: 
 categories: [linux , ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
