--- a/_posts/2014-10-17-用org-capture-templates创建带时间戳的文档.html
+++ b/_posts/2014-10-17-用org-capture-templates创建带时间戳的文档.html
@@ -4,6 +4,7 @@ comments: true
 title: 用org-capture-templates创建带时间戳的文档
 tags: 
 categories: [org ,jekyll ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
