--- a/_posts/2014-10-20-gnu emacs lisp 编程入门笔记（四）.html
+++ b/_posts/2014-10-20-gnu emacs lisp 编程入门笔记（四）.html
@@ -4,6 +4,7 @@ title      : GNU Emacs Lisp 编程入门笔记（四）
 categories : [emacs ,lisp ]
 tags       : lisp
 description: 
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
