--- a/_posts/2014-10-22-gnu emacs lisp编程入门笔记（五）.html
+++ b/_posts/2014-10-22-gnu emacs lisp编程入门笔记（五）.html
@@ -4,6 +4,7 @@ title      : GNU Emacs Lisp编程入门笔记（五）
 categories : [emacs ,lisp ]
 tags       : 
 description: 
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
