--- a/_posts/2014-10-23-Go语言程序设计读书笔记（一）.html
+++ b/_posts/2014-10-23-Go语言程序设计读书笔记（一）.html
@@ -2,8 +2,9 @@
 layout     : post
 title      : Go语言程序设计读书笔记（一）
 categories : [golang , ]
-tags       : 
+tags       : golang
 description: 
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
