--- a/_posts/2014-10-18-gnu emacs lisp编程入门笔记（一）.html
+++ b/_posts/2014-10-18-gnu emacs lisp编程入门笔记（一）.html
@@ -4,6 +4,7 @@ comments: true
 title: GNU Emacs Lisp 编程入门笔记（一)
 tags: emacs
 categories: [emacs ,lisp ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
