--- a/_posts/2014-10-19-gnu emacs lisp编程入门笔记（三）.html
+++ b/_posts/2014-10-19-gnu emacs lisp编程入门笔记（三）.html
@@ -4,6 +4,7 @@ comments: true
 title: GNU Emacs Lisp编程入门笔记（三）
 tags: emacs
 categories: [emacs ,lisp ]
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
