--- a/_posts/2014-10-23-gnu emacs lisp编程入门笔记（七）.html
+++ b/_posts/2014-10-23-gnu emacs lisp编程入门笔记（七）.html
@@ -2,8 +2,9 @@
 layout     : post
 title      : GNU Emacs Lisp编程入门笔记（七）
 categories : [emacs ,lisp ]
-tags       : 
-description: 
+tags       : lisp
+description: lisp
+author: xep007
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
