修改‘在org-mode表格中输入|'post

--- a/_posts/2014-10-25-在org-mode表格中输入|符号.html
+++ b/_posts/2014-10-25-在org-mode表格中输入|符号.html
@@ -24,5 +24,5 @@ To insert a vertical bar into a table field, use &vert; or, inside a word abc&ve
 </p>
 
 <p>
-在需要输入“|”的地方输入"&vert;"(不包括引号)就行了。
+在需要输入“|”的地方输入\vert就行了。
 </p>
