添加go语言程序设计读书笔记（五）

--- a/_posts/2014-10-25-Go语言程序设计读书笔记（二）.html
+++ b/_posts/2014-10-25-Go语言程序设计读书笔记（二）.html
@@ -105,7 +105,7 @@ Go语言的标识符是一个非空的字母或数字串，第一个字符必须
 </tr>
 
 <tr>
-<td class="left">contiue</td>
+<td class="left">continue</td>
 <td class="left">for</td>
 <td class="left">import</td>
 <td class="left">return</td>
