--- a/_posts/2014-10-30-Go语言程序设计读书笔记（五）.html
+++ b/_posts/2014-10-30-Go语言程序设计读书笔记（五）.html
@@ -642,13 +642,13 @@ unicode/utf8包里的几个有用的函数，主要用来查询和操作UTF-8编
 <tbody>
 <tr>
 <td class="left">utf8.FullRune(b)</td>
-<td class="left">如果b的第一个rune是UTF-8编码的话，返回ture</td>
+<td class="left">如果b的第一个rune是UTF-8编码的话，返回true</td>
 </tr>
 </tbody>
 <tbody>
 <tr>
 <td class="left">utf8.FullRuneInString(s)</td>
-<td class="left">如果s的第一个rune是UTF-8编码，返回ture</td>
+<td class="left">如果s的第一个rune是UTF-8编码，返回true</td>
 </tr>
 </tbody>
 <tbody>
@@ -672,19 +672,19 @@ unicode/utf8包里的几个有用的函数，主要用来查询和操作UTF-8编
 <tbody>
 <tr>
 <td class="left">utf8.RuneStart(x)</td>
-<td class="left">如果x可以作为一个rune的第一个字节的话，返回ture</td>
+<td class="left">如果x可以作为一个rune的第一个字节的话，返回true</td>
 </tr>
 </tbody>
 <tbody>
 <tr>
 <td class="left">utf8.RuneValid(b)</td>
-<td class="left">如果b中的字节能正确表示一个UTF-8字符串，返回ture</td>
+<td class="left">如果b中的字节能正确表示一个UTF-8字符串，返回true</td>
 </tr>
 </tbody>
 <tbody>
 <tr>
 <td class="left">utf8.ValidString(s)</td>
-<td class="left">如果s中的字节能正确表示一个UTF-8编码的字符串，返回ture</td>
+<td class="left">如果s中的字节能正确表示一个UTF-8编码的字符串，返回true</td>
 </tr>
 </tbody>
 </table>
@@ -718,72 +718,72 @@ unicode包主要提供了一些用来检查Unicode码点是否符合主要标准
 
 <tr>
 <td class="left">unicode.Is(table, c)</td>
-<td class="left">如果c在table中，返回ture</td>
+<td class="left">如果c在table中，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsControl(c)</td>
-<td class="left">如果c是一个控制字符，返回ture</td>
+<td class="left">如果c是一个控制字符，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsDigit(c)</td>
-<td class="left">如果c是一个十进制数字，返回ture</td>
+<td class="left">如果c是一个十进制数字，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsGraphic(c)</td>
-<td class="left">如果c是一个“图形”字符，如字母、数字、标记、符号或空格返回ture</td>
+<td class="left">如果c是一个“图形”字符，如字母、数字、标记、符号或空格返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsLetter(c)</td>
-<td class="left">如果c是一个字母，返回ture</td>
+<td class="left">如果c是一个字母，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsLower(c)</td>
-<td class="left">如果c是一小写字母，返回ture</td>
+<td class="left">如果c是一小写字母，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsMark(c)</td>
-<td class="left">如果c是一个标记，返回ture</td>
+<td class="left">如果c是一个标记，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsOneOf(tables, c)</td>
-<td class="left">如果c在tables中的任何一个table中，返回ture</td>
+<td class="left">如果c在tables中的任何一个table中，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsPrint(c)</td>
-<td class="left">如果c是一个可打印的字符，返回ture</td>
+<td class="left">如果c是一个可打印的字符，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsPunct(c)</td>
-<td class="left">如果c是一个标点符号，返回ture</td>
+<td class="left">如果c是一个标点符号，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsSpace(c)</td>
-<td class="left">如果c是一个空格，返回ture</td>
+<td class="left">如果c是一个空格，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsSymbol(c)</td>
-<td class="left">如果c是一个符号，返回ture</td>
+<td class="left">如果c是一个符号，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsTitle(c)</td>
-<td class="left">如果c是一个标题大写字符，返回ture</td>
+<td class="left">如果c是一个标题大写字符，返回true</td>
 </tr>
 
 <tr>
 <td class="left">unicode.IsUpper(c)</td>
-<td class="left">如果c是一个大写字母，返回ture</td>
+<td class="left">如果c是一个大写字母，返回true</td>
 </tr>
 
 <tr>
