修改org-publish被ox-publish替换的博文

--- a/_posts/2014-11-07-org-publish过时了.html
+++ b/_posts/2014-11-07-org-publish过时了.html
@@ -15,5 +15,5 @@ author: xep007
 </p>
 
 <p>
-解决办法：打开.emacs，把org-publish修改为ox-publish，保存，完工。
+解决办法：打开.emacs，把(require 'org-publish)修改为(require 'ox-publish)，保存，完工。
 </p>
