添加go笔记（八）

--- a/_posts/2014-10-23-Go语言程序设计读书笔记（一）.html
+++ b/_posts/2014-10-23-Go语言程序设计读书笔记（一）.html
@@ -1,6 +1,6 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（一）
+title      : Go语言程序设计读书笔记（一）——emacs for go编程环境
 categories : [golang , ]
 tags       : golang
 description: 
