--- a/_posts/2014-10-25-Go语言程序设计读书笔记（二）.html
+++ b/_posts/2014-10-25-Go语言程序设计读书笔记（二）.html
@@ -1,6 +1,6 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（二）
+title      : Go语言程序设计读书笔记（二）——布尔与数值类型
 categories : [golang , ]
 tags       : golang
 description: golang
