--- a/_posts/2014-10-26-Go语言程序设计读书笔记（三）.html
+++ b/_posts/2014-10-26-Go语言程序设计读书笔记（三）.html
@@ -1,6 +1,6 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（三）
+title      : Go语言程序设计读书笔记（三）——字符串基本知识
 categories : [golang , ]
 tags       : golang
 description: golang
