--- a/_posts/2014-10-28-Go语言程序设计读书笔记（四）.html
+++ b/_posts/2014-10-28-Go语言程序设计读书笔记（四）.html
@@ -1,6 +1,6 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（四）
+title      : Go语言程序设计读书笔记（四）——使用fmt格式化包
 categories : [golang , ]
 tags       : golang
 description: golang
