--- a/_posts/2014-10-30-Go语言程序设计读书笔记（五）.html
+++ b/_posts/2014-10-30-Go语言程序设计读书笔记（五）.html
@@ -1,6 +1,6 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（五）
+title      : Go语言程序设计读书笔记（五）——字符串之其他字符处理相关的包
 categories : [golang , ]
 tags       : golang
 description: golang
