--- a/_posts/2014-11-02-Go语言程序设计读书笔记（六）.html
+++ b/_posts/2014-11-02-Go语言程序设计读书笔记（六）.html
@@ -1,6 +1,6 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（六）
+title      : Go语言程序设计读书笔记（六）——字符串之正则表达式
 categories : [golang , ]
 tags       : golang
 description: golang
