--- a/_posts/2014-11-08-Go语言程序设计读书笔记（七）.html
+++ b/_posts/2014-11-08-Go语言程序设计读书笔记（七）.html
@@ -1,9 +1,10 @@
 ---
 layout     : post
-title      : Go语言程序设计读书笔记（七）
+title      : Go语言程序设计读书笔记（七）——集合类型之数组与切片
 categories : [golang , ]
 tags       : golang
 description: golang
+date: 2014-11-08
 author: xep007
 ---
 <div id="table-of-contents">
