修改code css底色为#4f4f4f

--- a/_posts/2014-11-09-Go语言程序设计读书笔记（八）.html
+++ b/_posts/2014-11-09-Go语言程序设计读书笔记（八）.html
@@ -139,7 +139,7 @@ map[KeyType]ValueType{key1: value1, key2:value2, ..., keyN:valueN}
 }
 
 &#32467;&#26524;&#20026;&#65306;
-<span style="color: #00ffff;">map</span>[<span style="color: #ffff00;">Mercury</span>:0.06 Venus:0.82 Earth:1 Mars:0.11]
+<span style="color: #00ffff;">map</span>[ Mercury:0.06 Venus:0.82 Earth:1 Mars:0.11 ]
 </pre>
 </div>
 
