--- a/_posts/2014-11-10-firefox使用stylish扩展显示weibo.com等网站的字体图标.html
+++ b/_posts/2014-11-10-firefox使用stylish扩展显示weibo.com等网站的字体图标.html
@@ -21,7 +21,7 @@ author: xep007
 <h2 id="sec-1"><span class="section-number-2">1</span> 存在的问题</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-firefox中s可以自定义页面显示字体。比如使用微软雅黑等漂亮的字体。但是在taobao.com、weibo.com和github.com等网站上有些图标是利用字体来显示的，因此一旦去掉“允许页面选择字体”选项时，上述网站的一些以字体来显示的图标就无法显示，甚至乱码。
+firefox中可以自定义页面显示字体。比如使用微软雅黑等漂亮的字体。但是在taobao.com、weibo.com和github.com等网站上有些图标是利用字体来显示的，因此一旦去掉“允许页面选择字体”选项时，上述网站的一些以字体来显示的图标就无法显示，甚至乱码。
 </p>
 </div>
 </div>
@@ -29,10 +29,10 @@ firefox中s可以自定义页面显示字体。比如使用微软雅黑等漂亮
 <div id="outline-container-sec-2" class="outline-2">
 <h2 id="sec-2"><span class="section-number-2">2</span> 解决办法</h2>
 <div class="outline-text-2" id="text-2">
-<ol class="org-ol">
+<ul class="org-ul">
 <li>在firefox附加组件中安装stylish扩展。重启后，在“附加组件”-&gt;“用户样式”-&gt;"stylish"中选择新建样式，填入以下内容。保存，重启。
 </li>
-</ol>
+</ul>
 <div class="org-src-container">
 
 <pre class="src src-style">@namespace url(http://www.w3.org/1999/xhtml);
@@ -42,9 +42,9 @@ firefox中s可以自定义页面显示字体。比如使用微软雅黑等漂亮
 </pre>
 </div>
 
-<ol class="org-ol">
+<ul class="org-ul">
 <li>在firefox“选项”-&gt;“内容”-&gt;"高级"中把"允许页面选择显示字体而无需使用上面的设置"打上勾就行了。
 </li>
-</ol>
+</ul>
 </div>
 </div>
