添加go笔记（十四）

--- a/_posts/2014-11-15-Go语言程序设计读书笔记（十三）——过程式编程之defer、panic和recover.html
+++ b/_posts/2014-11-15-Go语言程序设计读书笔记（十三）——过程式编程之defer、panic和recover.html
@@ -5,6 +5,7 @@ categories : [golang , ]
 tags       : golang
 description: golang
 author: xep007
+date: 2014-11-16
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
