--- a/_posts/2014-11-16-Go语言程序设计读书笔记（十四）——过程式编程之自定义函数.html
+++ b/_posts/2014-11-16-Go语言程序设计读书笔记（十四）——过程式编程之自定义函数.html
@@ -5,6 +5,7 @@ categories : [golang , ]
 tags       : golang
 description: golan
 author: xep007
+date: 2014-11-24
 ---
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
