--- a/_posts/2014-12-03-编译安装freshplayerplugin解决firefox上flash版本过低问题.html
+++ b/_posts/2014-12-03-编译安装freshplayerplugin解决firefox上flash版本过低问题.html
@@ -12,7 +12,7 @@ author: xep007
 <ul>
 <li><a href="#sec-1">1. 先安装编译所需的库文件</a></li>
 <li><a href="#sec-2">2. git clone freshplayerplugin并编译</a></li>
-<li><a href="#sec-3">3. 重启firefox就可以了。</a></li>
+<li><a href="#sec-3">3. 重启firefox</a></li>
 </ul>
 </div>
 </div>
@@ -56,5 +56,12 @@ cp libfreshwrapper-pepperflash.so ~/.mozilla/plugins
 </div>
 
 <div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3"><span class="section-number-2">3</span> 重启firefox就可以了。</h2>
+<h2 id="sec-3"><span class="section-number-2">3</span> 重启firefox</h2>
+<div class="outline-text-2" id="text-3">
+
+<div class="figure">
+<p><img src="http://xep007.github.io/img/pepperflash.png" alt="pepperflash.png" />
+</p>
+</div>
+</div>
 </div>
